# ML_Why_employees_quit

./: .gitignore  README.md  docker-compose.yml  notebook.ipynb  pyproject.toml
.github/workflows/: ci_cd.yml
scripts/: init.sql
src/: data_processing.py  train.py
src/api/: main.py  model_loader.py  router.py  schemas.py
src/database/: connection.py  create_db.py  crud.py  models.py
tests/: test_api.py  test_data.py
